--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,13 @@
 {
   "name": "Validação de Visitas",
   "short_name": "Visitas",
-  "start_url": "/visitas/",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#1a73e8",
   "orientation": "portrait",
   "icons": [
-    {
-      "src": "icone.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icone.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "icone.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icone.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
